feat(fundamentals): practice fundamentals rust

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "conventionalCommits.scopes": ["docs", "backend"]
+  "conventionalCommits.scopes": [
+    "docs",
+    "backend",
+    "fundamentals"
+  ]
 }
